updated all nuget packages, navigation bar added

--- a/DIY-Propter/Views/Shared/_Layout.cshtml
+++ b/DIY-Propter/Views/Shared/_Layout.cshtml
@@ -1,16 +1,21 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+    @Html.Partial("Navigation")
+
     @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
+    <script src="~/Scripts/bootstrap.min.js"></script>
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
