--- a/DIY-Propter/Views/Shared/Navigation.cshtml
+++ b/DIY-Propter/Views/Shared/Navigation.cshtml
@@ -29,6 +29,11 @@
                 </div>
                 <button type="submit" class="btn btn-default">Search</button>
             </form>
-        </div><!-- /.navbar-collapse -->
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a class="navbar-brand" href="#">@ViewBag.Title</a>
+                </li>
+            </ul>
+</div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
