--- a/DIY-Propter/Views/Shared/Navigation.cshtml
+++ b/DIY-Propter/Views/Shared/Navigation.cshtml
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="@Url.Action("Index","Home",null)">DIY Prompter</a>
+            <a class="navbar-brand" href="@Url.Action("Overview", "Home", null)">DIY Prompter</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,7 +25,7 @@
             </ul>
             <form class="navbar-form navbar-left" role="search" action="@Url.Action("Search", "Home", null)">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control" placeholder="Search" name="searchterm">
                 </div>
                 <button type="submit" class="btn btn-default">Search</button>
             </form>
