added basic scraffold for list/create

--- a/DIY-Propter/Views/Shared/Navigation.cshtml
+++ b/DIY-Propter/Views/Shared/Navigation.cshtml
@@ -18,7 +18,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="@Url.Action("List","Manage",null)">Show all Promptings</a></li>
+                        <li><a href="@Url.Action("Index","Manage",null)">Show all Promptings</a></li>
                         <li><a href="@Url.Action("Create","Manage",null)">Create new Prompting</a></li>
                     </ul>
                 </li>
