--- a/DIY-Propter/Views/Manage/Create.cshtml
+++ b/DIY-Propter/Views/Manage/Create.cshtml
@@ -1,5 +1,52 @@
-﻿@{
+﻿@model DIY_Propter.Models.Prompting
+
+@{
     ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
+
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+
+    <fieldset>
+        <legend>Prompting</legend>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.PromptID)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.PromptID)
+            @Html.ValidationMessageFor(model => model.PromptID)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Title)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Title)
+            @Html.ValidationMessageFor(model => model.Title)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Text)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Text)
+            @Html.ValidationMessageFor(model => model.Text)
+        </div>
+
+        <p>
+            <input type="submit" value="Create" />
+        </p>
+    </fieldset>
+}
+
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
