--- a/DIY-Propter/Content/home.css
+++ b/DIY-Propter/Content/home.css
@@ -1,4 +1,6 @@
-﻿body {
-  background-color: black; }
+﻿.multi-line {
+  margin: 0;
+  width: 1140px;
+  height: 300px; }
 
 /*# sourceMappingURL=home.css.map */
