--- a/DIY-Propter/Views/Shared/Navigation.cshtml
+++ b/DIY-Propter/Views/Shared/Navigation.cshtml
@@ -8,13 +8,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="@Url.Action("Overview", "Home", null)">DIY Prompter</a>
+            <a class="navbar-brand" href="@Url.Action("Index", "Home", null)">DIY Prompter</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="@Url.Action("Overview","Home",null)">Overview <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="@Url.Action("Index", "Home", null)">Overview <span class="sr-only">(current)</span></a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
