--- a/DIY-Propter/Views/Shared/_Layout.cshtml
+++ b/DIY-Propter/Views/Shared/_Layout.cshtml
@@ -7,12 +7,14 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/home.min.css" rel="stylesheet" />
+    <meta name="description" content="telepromter" />
 </head>
 <body>
     @Html.Partial("Navigation")
-
-    @RenderBody()
-
+    <div class="container">
+        @RenderBody()
+    </div>
     @Scripts.Render("~/bundles/jquery")
     <script src="~/Scripts/bootstrap.min.js"></script>
 
