word wrap for active item

--- a/DIY-Propter/Content/prompter.css
+++ b/DIY-Propter/Content/prompter.css
@@ -12,7 +12,8 @@
     font-size: 40px;
     color: #808080; }
   .pitems .active {
+    white-space: pre-wrap;
     color: white;
-    font-size: 60px; }
+    font-size: 70px; }
 
 /*# sourceMappingURL=prompter.css.map */
