--- a/DIY-Propter/Content/prompter.scss
+++ b/DIY-Propter/Content/prompter.scss
@@ -19,7 +19,8 @@
     }
 
     .active {
+          white-space: pre-wrap;
         color:white;
-        font-size:60px;
+        font-size:70px;
     }
 }
