added edit/delete/details and fixed scrolling issue in prompt mode

--- a/DIY-Propter/Content/prompter.scss
+++ b/DIY-Propter/Content/prompter.scss
@@ -1,8 +1,9 @@
 ﻿body {
   background-color: #000;
   color: #3D3D3D;
-  font-family: 'Consolas','Courier New',Courier,monospace;
+  font-family: 'Courier New',Courier,monospace;
   font-size: 30px;
+    overflow: hidden;
 }
 
 .pitems {
